# swallow

./: README.md  pyproject.toml  swallow.ipynb
src/swallow/: __init__.py  __main__.py
