[project]
name = "swallow"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Marukome0743", email = "akio.muto@bnt.benextgroup.jp" }
]
dependencies = [
    "torch>=2.2.1",
    "accelerate>=0.27.2",
    "protobuf>=4.25.3",
    "sentencepiece>=0.2.0",
    "transformers>=4.38.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
swallow = "swallow:create_prompt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/swallow"]
