[project]
name = "swallow"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Marukome0743", email = "akio.muto@bnt.benextgroup.jp" }
]
dependencies = [
    "transformers>=4.39.2",
    "sentencepiece>=0.2.0",
    "accelerate>=0.28.0",
    "protobuf>=5.26.1",
    "ipykernel>=6.29.4",
    "ipywidgets>=8.1.2",
    "torch==2.7.1",
    "torchvision==0.17.2+cpu",
    "torchaudio==2.2.2+cpu",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
swallow = "swallow:create_prompt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/swallow"]
